fix lint and CI actions
